--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             border-radius: 11px;
             -webkit-text-fill-color: rgb(5, 5, 49);
             outline: none;       /* remove a borda de foco */
-  user-select: none;   /* impede o texto de ser selecionado */
+            user-select: none;   /* impede o texto de ser selecionado */
 
         }
 
@@ -44,6 +44,9 @@
             border-radius: 9px;
             font-size: 50px;
             background-color: rgba(255, 219, 18, 0);
+            outline: none;       /* remove a borda de foco */
+            user-select: none;   /* impede o texto de ser selecionado */
+
         }
     </style>
 </head>
