--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
         button {
             border-radius: 9px;
             font-size: 50px;
+            background-color: rgba(2, 0, 124, 0.158);
+            outline: none;       /* remove a borda de foco */
+            user-select: none;   /* impede o texto de ser selecionado */
+
+        }
+        button:hover{
+            border-radius: 9px;
+            font-size: 50px;
             background-color: rgba(255, 219, 18, 0);
             outline: none;       /* remove a borda de foco */
             user-select: none;   /* impede o texto de ser selecionado */
