--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             background-color: rgba(2, 0, 124, 0.158);
             outline: none;       /* remove a borda de foco */
             user-select: none;   /* impede o texto de ser selecionado */
+            border-color: black;
 
         }
         button:hover{
@@ -54,6 +55,7 @@
             background-color: rgba(255, 219, 18, 0);
             outline: none;       /* remove a borda de foco */
             user-select: none;   /* impede o texto de ser selecionado */
+            border-color: black;
 
         }
     </style>
